--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.14.0",
     "axios": "^1.7.2",
     "axios-hooks": "^5.0.2",
     "classnames": "^2.5.1",
