--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format:check": "prettier . --check",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@tabler/icons-react": "^3.14.0",
@@ -19,13 +20,15 @@
     "axios-hooks": "^5.0.2",
     "classnames": "^2.5.1",
     "flowbite-react": "^0.8.0",
+    "formik": "^2.4.6",
     "lodash-es": "^4.17.21",
     "lru-cache": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-tsconfig-paths": "^4.3.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
@@ -49,8 +52,10 @@
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.37",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "sass": "^1.78.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "husky": "^8.0.0"
   }
 }
