--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.37",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "sass-embedded": "^1.79.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
     "vite": "^5.4.9"
